--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,6 +371,10 @@ input[type=number]::-webkit-outer-spin-button {
 
     background: yellow;
 }
+.roadmap.drag-mode {
+
+    cursor:grabbing;
+}
 
 .roadmap.drag-mode
 .row:not(.dragging)
