--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -75,6 +75,10 @@ body {
 
                         cursor: pointer;
                         padding-right: 7px;
+                        -webkit-user-select: none;  
+                        -moz-user-select: none;    
+                        -ms-user-select: none;      
+                        user-select: none;
 
                         /* &:before */
                         .arrow-button
